--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,28 +1,101 @@
 /**
  * Site header
  */
+
+$header-bar-width-desktop: 660px;
+
 .site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
-    min-height: 56px;
+  background-color: #009BBE;
+  min-height: 90px;
 
-    // Positioning context for the mobile navigation icon
-    position: relative;
-}
+  // Positioning context for the mobile navigation icon
+  position: relative;
 
-.site-title {
-    font-size: 26px;
-    font-weight: 300;
-    line-height: 56px;
-    letter-spacing: -1px;
-    margin-bottom: 0;
-    float: left;
-
-    &,
-    &:visited {
-        color: $grey-color-dark;
+  &.site-header-thick {
+    min-height: 200px;
+    .site-search-box {
+      bottom: 40px;
     }
+  }
+
+  .site-title {
+    font-size: 24px;
+    color: white;
+    position: absolute;
+    left: 15px;
+    top: 20px;
+    &:hover {
+      text-decoration: inherit;
+    }
+  }
+
+  .site-search-bar {
+    display: absolute;
+    max-width: 660px;
+    height: 50px;
+  }
+
+  .site-search-box {
+    position: absolute;
+    width: 660px;
+    left: 50%;
+    margin-left: -330px;
+    height: 50px;
+    bottom: 20px;
+    .indicator {
+      color: #969696;
+      position: absolute;
+      left: 0;
+      line-height: 50px;
+      padding-left: 20px;
+      width: 45px;
+      height: 100%;
+      border-top-left-radius: 5px;
+      border-bottom-left-radius: 5px;
+      background-color: white;
+    }
+
+    .input-wrapper {
+      position: absolute;
+      left: 45px;
+      right: 85px;
+      height: 100%;
+      input {
+        border: none;
+        background: white;
+        outline: none;
+        width: 100%;
+        height: 100%;
+        &:placeholder-shown {
+          color: #969696;
+        }
+      }
+    }
+    .button {
+      position: absolute;
+      line-height: 50px;
+      text-align: center;
+      width: 85px;
+      height: 100%;
+      right: 0;
+      border-top-right-radius: 5px;
+      border-bottom-right-radius: 5px;
+      background-color: #007f9b;
+      color: white;
+    }
+  }
+  .site-service-link {
+    color: white;
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    font-size: 18px;
+    &:hover {
+      text-decoration: inherit;
+    }
+  }
 }
+
 
 .site-nav {
     float: right;
