Student / Teacher Page, Post 구조 변경

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -313,3 +313,20 @@ $header-bar-width-desktop: 660px;
         }
     }
 }
+
+
+.breadcrumb {
+  ul {
+    margin: 0 0 10px 0;
+    li {
+      list-style: none;
+      display: inline-block;
+    }
+    li + li {
+      &:before {
+        content: '>';
+      }
+    }
+  }
+
+}
