--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -66,7 +66,7 @@ figcaption {
  * Lists
  */
 ul, ol {
-    margin-left: $spacing-unit;
+    margin-left: 0.5em;
 }
 
 li {
@@ -76,6 +76,16 @@ li {
     }
 }
 
+ul.list-style {
+  & > li {
+    list-style-type: none;
+    &:before {
+      position: relative;
+      left: -0.5em;
+      content: '-';
+    }
+  }
+}
 
 
 /**
