--- a/css/main.scss
+++ b/css/main.scss
@@ -7,14 +7,14 @@
 
 // Our variables
 $base-font-family: "Noto Sans Korean", "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
+$base-font-size:   14px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
+$text-color:       #646464;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
 
@@ -23,11 +23,16 @@ $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
-$content-width:    800px;
+$content-width:    760px;
 
 $on-palm:          600px;
-$on-laptop:        1024px;
+$on-laptop:        800px;
 
+$site-title-min-width-on-desktop: 330px;
+$site-service-link-min-width-on-desktop: 190px;
+$site-search-box-max-width-on-desktop: 660px;
+
+$breadcrumb-max-width: 900px;
 
 
 // Use media queries like this:
@@ -57,5 +62,6 @@ $on-laptop:        1024px;
 "base",
 "layout",
 "syntax-highlighting",
-"page/index"
+"page/index",
+"layout/category"
 ;
