--- a/_sass/layout/_category.scss
+++ b/_sass/layout/_category.scss
@@ -13,8 +13,13 @@
           margin-bottom: 5px;
           padding-left: $spacing-unit / 3 - 2px;
           border-left: 2px solid transparent;
+          color: #969696;
           &.active {
             border-left: 2px solid #039cbf;
+            color: $text-color;
+          }
+          a:hover, a:visited, a:link {
+            color: inherit;
           }
         }
       }
