set proper ruby version / fix http link / add favicon

--- a/css/main.scss
+++ b/css/main.scss
@@ -64,8 +64,8 @@ $breadcrumb-max-width: 900px;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-url("http://fonts.googleapis.com/earlyaccess/notosanskr.css"),
-url("https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"),
+url("//fonts.googleapis.com/earlyaccess/notosanskr.css"),
+url("//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"),
 "lib/normalize",
 "base",
 "layout",
