--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
   <script type="text/javascript" src="{{ "/js/anchor.min.js" | prepend: site.baseurl }}"></script>
   <script type="text/javascript" src="{{ "/js/utils.js" | prepend: site.baseurl }}"></script>
 
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" sizes="32x32" />
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
