--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <script type="text/javascript" src="{{ "/js/anchor.min.js" | prepend: site.baseurl }}"></script>
+  <script type="text/javascript" src="{{ "/components/anchor-js/anchor.min.js" | prepend: site.baseurl }}"></script>
   <script type="text/javascript" src="{{ "/js/utils.js" | prepend: site.baseurl }}"></script>
 
   <link rel="icon" type="image/x-icon" href="/favicon.ico" sizes="32x32" />
