Update on #4: Client search with lunr.js (without good UI now ha)

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <img src="{{ site.baseurl }}/img/logo.png"> - help
   </a>
   </div>
-  <div class="site-search-box">
+  <form class="site-search-box" action="/search/">
     <div class="indicator">
       <span class="fa fa-search"></span>
     </div>
@@ -13,7 +13,7 @@
              placeholder="에듀캐스트의 궁궐에 당도한 것을 환영하오 낯선이여">
     </div>
     <div class="button">검색</div>
-  </div>
+  </form>
   <a class="site-service-link" href="https://educast.pro">
     <span class="fa fa-reply"></span> back to educast
   </a>
