--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -22,7 +22,7 @@ layout: default
       <div class="category-menu">
         <ul>
           {% for post in category_pages %}
-          <li class="active"><a href="">{{ post.title }}</a></li>
+          <li class="active"><a href="#{{ post.title | slugify }}">{{ post.title }}</a></li>
           {% endfor %}
         </ul>
       </div>
@@ -40,7 +40,7 @@ layout: default
             {% assign possible_header_size = possible_header | size %}
             {% if possible_header_size > 0 %}
             <li>
-              <a href="{{ site.baseurl }}{{ post.url }}">{{ possible_header }}</a>
+              <a href="{{ site.baseurl }}{{ post.url }}#{{ possible_header | slugify }}">{{ possible_header }}</a>
             </li>
             {% endif %}
             {% endfor %}
@@ -53,7 +53,5 @@ layout: default
 </div>
 
 <script>
- makeHeaderLink(".post-summary-content ul li a");
- makeHeaderLink(".category-menu ul li a");
  anchors.add(".post-summary-title");
 </script>
