--- a/_sass/page/_index.scss
+++ b/_sass/page/_index.scss
@@ -5,7 +5,7 @@
     }
 
     .home-faq-wrapper {
-      max-width: 600px;
+      max-width: 660px;
       width: 100%;
       display: table;
       margin: auto;
@@ -13,6 +13,11 @@
       .home-faq-item {
         display: table-cell;
         width: 50%;
+        padding-right: 10px;
+        & + .home-faq-item {
+          padding-right: 0;
+          padding-left: 10px;
+        }
       }
     }
     @include media-query($on-palm) {
@@ -27,10 +32,15 @@
       .home-faq-wrapper {
         display: block;
         .home-faq-item {
+          padding: 0;
           font-size: 12px;
           line-height: 1.5em;
           display: block;
           width: 100%;
+          padding: 0;
+          & + .home-faq-item {
+            padding: 0;
+          }
           &:before {
             display: block;
             content: "-";
@@ -38,6 +48,11 @@
             color: transparent;
             width: $spacing-unit / 3;
             border-top: 2px solid white;
+          }
+          li > a {
+            &:visited, &:hover, &:link {
+              color: inherit;
+            }
           }
         }
       }
