better resolution logo / Design Improvements / (bugfix) cannot search when text contains spacebar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
       <input type="text" name="q" maxlength="200"
              placeholder="에듀캐스트의 궁궐에 당도한 것을 환영하오 낯선이여">
     </div>
-    <div class="button">검색</div>
+    <button type="submit" class="button">검색</button>
   </form>
   <a class="site-service-link" href="https://educast.pro">
     <span class="fa fa-reply"></span> back to educast
@@ -27,11 +27,11 @@
   <div class="site-menu">
     <input type="checkbox" id="menu-open-checker">
     <ul class="menu">
-      <li><a href="/teacher/">
-        <i class="fa fa-rocket"></i> 강사
-      </a></li>
       <li><a href="/student/">
         <i class="fa fa-user"></i> 수강생
+      </a></li>
+      <li><a href="/teacher/">
+        <i class="fa fa-rocket"></i> 선생님
       </a></li>
       <li><a href="https://educast.pro">
         <i class="fa fa-reply"></i> 에듀캐스트로 돌아가기
