--- a/_sass/page/_index.scss
+++ b/_sass/page/_index.scss
@@ -22,7 +22,8 @@
     }
     @include media-query($on-palm) {
       color: white;
-      margin-top: -$spacing-unit;
+      // need 2px to hide small white gap;
+      margin-top: -$spacing-unit - 2;
       padding: $spacing-unit / 2 $spacing-unit / 3;
       background-color: #009BBE;
       h2 {
@@ -33,7 +34,7 @@
         display: block;
         .home-faq-item {
           padding: 0;
-          font-size: 12px;
+          font-size: 13px;
           line-height: 1.5em;
           display: block;
           width: 100%;
