--- a/css/main.scss
+++ b/css/main.scss
@@ -40,6 +40,8 @@ $title-width-on-laptop: 230px;
 $link-width-on-laptop: 140px;
 $search-maxwidth-on-laptop: 660px;
 
+$footer-height-on-desktop: 270px;
+
 $breadcrumb-max-width: 900px;
 
 
