--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,12 @@
 <html>
   {% include head.html %}
   <body>
-    {% include header.html %}
-    <div class="page-content">
+    <div class="body-wrap">
+      {% include header.html %}
+      <div class="page-content">
         {{ content }}
+      </div>
+      {% include footer.html %}
     </div>
-    {% include footer.html %}
   </body>
 </html>
