--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,3 +1,11 @@
+html, body {
+  height: 100%;
+}
+
+.body-wrap {
+  min-height: 100%;
+  position: relative;
+}
 /**
  * Reset some basic elements
  */
