--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,22 +7,28 @@
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
-          <li>{{ site.title }}</li>
+          <li>에듀캐스트</li>
+          <li><a href="https://educast.pro">https://educast.pro</a></li>
+          <li>이메일</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
       </div>
 
       <div class="footer-col footer-col-2">
         <ul class="social-media-list">
-          {% if site.github_username %}
+          {% if site.facebook_username %}
           <li>
-            {% include icon-github.html username=site.github_username %}
+            {% include icon-facebook.html username=site.facebook_username %}
           </li>
           {% endif %}
-
           {% if site.twitter_username %}
           <li>
             {% include icon-twitter.html username=site.twitter_username %}
+          </li>
+          {% endif %}
+          {% if site.github_username %}
+          <li>
+            {% include icon-github.html username=site.github_username %}
           </li>
           {% endif %}
         </ul>
