--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -364,6 +364,7 @@
  * Site footer
  */
 .site-footer {
+  background-color: #EEE;
   position: absolute;
   bottom: 0;
   padding: $spacing-unit 0;
@@ -382,8 +383,14 @@
 
 .contact-list,
 .social-media-list {
-    list-style: none;
-    margin-left: 0;
+  list-style: none;
+  margin-left: 0;
+  .fa {
+    color: $grey-color;
+    text-decoration: none;
+    width: 15px;
+    text-align: center;
+  }
 }
 
 .footer-col-wrapper {
