Use yaml attributes to control header & footer per page / Make header white in index page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer">
+<footer class="site-footer{% if include.transparent %} site-footer-transparent{% endif %}">
 
   <div class="wrapper">
 
