--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="site-header{% if include.thick_header %} site-header-thick{% endif %}">
+<header class="site-header{% if include.thick %} site-header-thick{% endif %}">
   <input type="checkbox" id="search-open-checker">
   <a class="site-title" href="{{ site.baseurl }}/">
     <img src="{{ site.baseurl }}/img/logo.png"> - help
