--- a/_sass/layout/_category.scss
+++ b/_sass/layout/_category.scss
@@ -14,12 +14,13 @@
           padding-left: $spacing-unit / 3 - 2px;
           border-left: 2px solid transparent;
           color: #969696;
-          &.active {
+          &:hover {
             border-left: 2px solid #039cbf;
             color: $text-color;
           }
           a:hover, a:visited, a:link {
             color: inherit;
+            text-decoration: none;
           }
         }
       }
