User Environment Style

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,7 @@
 
   <script type="text/javascript" src="{{ "/components/anchor-js/anchor.min.js" | prepend: site.baseurl }}"></script>
   <script type="text/javascript" src="{{ "/js/utils.js" | prepend: site.baseurl }}"></script>
+  <script type="text/javascript" src="{{ "/components/ua-parser-js/dist/ua-parser.min.js" | prepend: site.baseurl }}"></script>
 
   <link rel="icon" type="image/x-icon" href="/favicon.ico" sizes="32x32" />
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
