--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
     </div>
     <div class="input-wrapper">
       <input type="text" name="q" maxlength="200"
-             placeholder="에듀캐스트의 궁궐에 당도한 것을 환영하오 낯선이여">
+             placeholder="궁금한 내용을 검색해 주세요.">
     </div>
     <button type="submit" class="button">검색</button>
   </form>
