change brand color

--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,7 @@ $spacing-unit:     30px;
 
 $text-color:       #646464;
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$brand-color:      #004085;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
