add back to the top button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
         {{ content }}
       </div>
       {% include footer.html transparent=page.transparent_footer %}
+      <a href="#" class="back-to-the-top">↑</a>
     </div>
     <script>
     (function () {
