--- a/_sass/page/_index.scss
+++ b/_sass/page/_index.scss
@@ -25,7 +25,7 @@
       // need 2px to hide small white gap;
       margin-top: -$spacing-unit - 2;
       padding: $spacing-unit / 2 $spacing-unit / 3;
-      background-color: #009BBE;
+      background-color: $brand-color;
       h2 {
         font-size: 16px;
         text-align: inherit;
