--- a/css/main.scss
+++ b/css/main.scss
@@ -14,9 +14,12 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #646464;
-$background-color: #fdfdfd;
-$brand-color:      #004085;
+$text-color:         #646464;
+$background-color:   #fdfdfd;
+$brand-dark-color:   #00336a;
+$brand-color:        #004085;
+$brand-light-color:  #387ac2;
+$brand-accent-color: #ff8957;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
