--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,14 @@
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+
+  <meta property="fb:app_id" content="360316174050720">
+  <meta property="og:url" content="{{ site.url }}">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="{{ site.title }}">
+  <meta property="og:image" content="{{ site.baseurl }}/img/educast_logo_opengraph.png">
+  <meta property="og:description" content="{{ site.description }}">
+
   <script type="text/javascript">
   if (location.protocol.indexOf('https') < 0 && location.host === 'help.educast.pro') {
     location.href = 'https:' + location.href.substring(location.protocol.length);
