--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+
   <meta property="fb:app_id" content="360316174050720">
   <meta property="og:url" content="{% if page.url %} {{ page.url | prepend: site.baseurl }} {% else %}{{ site.url }}">
   <meta property="og:type" content="website">
