--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
   <meta property="fb:app_id" content="360316174050720">
   <meta property="og:url" content="{% if page.url %} {{ page.url | prepend: site.baseurl }} {% else %}{{ site.url }}">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="{{ site.baseurl }}/img/educast_logo_opengraph.png">
+  <meta property="og:image" content="{{ site.url }}/img/educast-logo-opengraph.png">
   <meta property="og:description" name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
 
