TNT 912 educast.com footer & header & config

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
     </div>
     <button type="submit" class="button">검색</button>
   </form>
-  <a class="site-service-link" href="https://educast.pro">
+  <a class="site-service-link" href="https://educast.com">
     <span class="fa fa-reply"></span> back to educast
   </a>
   <label class="site-search-open-btn" for="search-open-checker">
@@ -31,7 +31,7 @@
       <li><a href="/teacher/">
         <i class="fa fa-rocket"></i> 선생님
       </a></li>
-      <li><a href="https://educast.pro">
+      <li><a href="https://educast.com">
         <i class="fa fa-reply"></i> 에듀캐스트로 돌아가기
       </a></li>
     </ul>
