--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li>에듀캐스트</li>
-          <li><a href="https://educast.pro">https://educast.pro</a></li>
+          <li><a href="https://educast.com">https://educast.com</a></li>
           <li>이메일</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
